# korri-n2k

./: .cargo-ignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
annexes/specs/: can_glossary.md  canboat_json_format.md
build_core/: conf.rs  domain.rs  errors.rs  gen_lookups.rs  gen_pgns.rs  mod.rs  name_helpers.rs  repetitive_fields.rs  type_helpers.rs
build_core/tools/scripts/: find_enums.sh  find_pgns.sh
build_core/var/: pgn_manifest.json
examples/: README.md
examples/esp32-c3/: quickstart.rs
examples/esp32-s3/: quickstart.rs
examples/std/: iso_name_usage.rs  lookup_enum_usage.rs  quickstart.rs
examples/stm32/: quickstart.rs
scripts/: download_canboat.sh  verify_docs.sh
src/: core.rs  error.rs  lib.rs
src/infra/: mod.rs
src/infra/codec/: mod.rs  traits.rs
src/infra/codec/bits/: mod.rs  tests.rs
src/infra/codec/engine/: mod.rs  tests.rs
src/protocol/: mod.rs
src/protocol/lookups/: mod.rs
src/protocol/managment/: address_supervisor.rs  mod.rs
src/protocol/managment/address_claiming/: mod.rs
src/protocol/managment/address_manager/: mod.rs
src/protocol/managment/iso_name/: mod.rs
src/protocol/managment/network_discovering/: mod.rs
src/protocol/messages/: mod.rs
src/protocol/transport/: mod.rs
src/protocol/transport/can_frame/: mod.rs
src/protocol/transport/can_id/: mod.rs  tests.rs
src/protocol/transport/fast_packet/: mod.rs  tests.rs
src/protocol/transport/fast_packet/assembler/: mod.rs  tests.rs
src/protocol/transport/fast_packet/builder/: mod.rs  tests.rs
src/protocol/transport/traits/: can_bus.rs  korri_timer.rs  mod.rs  pgn_sender.rs
tests/: first_conversation.rs  mod.rs  test_pgn_129038_129039.rs
tests/helpers/: mod.rs
tests/protocol/: mod.rs
tests/protocol/managment/: address_claiming_test.rs  address_manager_test.rs  address_supervisor_test.rs  mod.rs  network_discovering_test.rs
tests/protocol/messages/: generated_sizes_test.rs  mod.rs
tests/protocol/transport/: mod.rs
tests/protocol/transport/fast_packet/: fast_packet_pgn_tests.rs  integration_tests.rs  mod.rs
